<resources>
    <string name="app_name">Memorandum</string>
    <string name="enter_your_pin">Enter your PIN</string>
    <string name="sign_in_with_your_google_account">Sign in with your Google Account</string>
    <string name="enter_a_pin_to_secure_your_data">Enter a PIN to secure your data</string>
    <string name="good_afternoon">Good Afternoon!</string>
    <string name="calender_view">Calender View</string>
    <string name="favourites">Favourites</string>
    <string name="reminder2">Reminder</string>
    <string name="change_pin">Change PIN</string>
    <string name="feedback">feedback</string>
    <string name="help">help</string>
    <string name="closedrawer">close drawer</string>
    <string name="opendrawer">open drawer</string>
    <string name="defaultMoodForNotes">4as@#d4</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gm">Good Morning!</string>
    <string name="ge">Good Evening!</string>
    <string name="gn">Good Night!</string>
    <string name="new_entry">New Entry</string>
    <string name="mood">Mood</string>
    <string name="highlights">Highlights</string>
    <string name="location">Location</string>
    <string name="imageSource">Choose Image Source</string>
    <string name="make_favourite">Make Favourite</string>
    <string name="title_permissions">Need Permissions</string>
    <string name="description_permissions">This application needs permission to access device\'s storage and location.</string>
    <string name="label_grant_permissions">Please grant the required permissons before we begin!</string>
    <string name="label_fill_out_form">Please Log In with Google Account before we begin!</string>
    <string name="confirm_your_new_pin">Confirm your new PIN</string>
    <string name="enter_pin">Please enter a PIN before we begin!</string>
    <string name="okay">Okay</string>
    <string name="journal">Journal</string>
    <string name="calendarviewtext">Calendar View</string>
    <string name="favoutites">Favourites</string>
    <string name="changeppin">Change PIN</string>
    <string name="cka">No entries available.\n Click \"+\" to add a new entry</string>
    <string name="create_new_pin">Create new PIN</string>

    <string name="banner_ad_unit_id">ca-app-pub-6900171412533642/1073663018</string>
    <string name="quick_view">Quick View</string>
    <string name="press_and_hold_on_any_entry_to_view_it_in_short">Press and hold on any entry to view it in short!</string>
    <string name="change_date_and_time">Change Date and Time</string>
    <string name="tap_on_date_and_time_while_adding_entry_to_change_it">Tap on date and time while adding entry to change it.</string>
    <string name="add_mood">Add Mood</string>
    <string name="add_mood_quickly_scroll_up_for_more_suggestions">Add mood quickly. Scroll up for more suggestions.</string>
    <string name="interstitialAd2">ca-app-pub-6900171412533642/1848732214</string>
    <string name="hehelp">Help</string>
    <string name="rate_us">Rate Us</string>
    <string name="entries_and_notes">Entries and Notes</string>
    <string name="important_notes">Important Notes</string>
    <string name="no_favourite_"><![CDATA[No favourite entries. To make entry favourite :  Open Entry>Menu>Make Favourite]]></string>
    <string name="impnotes">Important Notes</string>
    <string name="blahblah">No notes available.\n Click \"+\" to add a new note</string>
    <string name="your_note">Your note</string>
    <string name="title">Title</string>
</resources>
