<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0e0e0"
    android:fitsSystemWindows="false"
    tools:context=".activities.enterEntryActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollIndicators="right"
        android:scrollbars="vertical"
        tools:targetApi="m">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="60sp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/basic_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/white"
                android:elevation="8sp"
                android:nestedScrollingEnabled="false"
                tools:targetApi="m">

                <ImageView
                    android:id="@+id/navArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/titleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24sp"
                    android:text="@string/new_entry"
                    android:textColor="@color/fontc"
                    android:textSize="24sp" />

            </android.support.v7.widget.Toolbar>

            <RelativeLayout
                android:id="@+id/layoutForDateTime"
                android:layout_width="match_parent"
                android:layout_height="36sp"
                android:layout_below="@id/basic_toolbar"
                android:background="@color/fontc"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewForDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18sp"
                    android:background="#20000000"
                    android:paddingBottom="4sp"
                    android:paddingStart="16sp"
                    android:paddingTop="4sp"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    tools:ignore="RelativeOverlap,RtlSymmetry" />

                <TextView
                    android:id="@+id/textViewForTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="18sp"
                    android:background="#20000000"
                    android:paddingBottom="4sp"
                    android:paddingEnd="16sp"
                    android:paddingTop="4sp"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    tools:ignore="RelativeOverlap,RtlSymmetry" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutForCalendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutForDateTime"
                android:background="@color/fontc"
                android:orientation="vertical"
                android:visibility="gone">

                <CalendarView
                    android:id="@+id/calendar"
                    android:layout_width="match_parent"
                    android:layout_height="350dp" />

                <TimePicker
                    android:theme="@style/Theme.Design.NoActionBar"
                    android:id="@+id/timepicker"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/layoutForCalendar"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"
                android:layout_marginTop="6sp"
                android:background="#ffffffff"
                android:elevation="8sp"
                tools:targetApi="lollipop">


                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:layout_toStartOf="@+id/frame"
                    android:maxLength="35"
                    android:textColor="@color/fontc"
                    android:textColorHint="#aa757575" />

                <ImageView
                    android:id="@+id/frame"
                    android:layout_width="64dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/buttonforsuggetions"
                    android:hint="@string/mood"
                    android:maxLength="20"
                    android:textColor="@color/fontc"
                    android:textColorHint="#aa757575" />

                <Button
                    android:id="@+id/buttonforsuggetions"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/editText1"
                    android:layout_toStartOf="@+id/frame"
                    android:background="@drawable/ic_arrow_drop_down_black_24dp"
                    android:gravity="center" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/highlight_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/relativeLayout2">

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_marginLeft="16sp"
                    android:layout_marginRight="16sp"
                    android:layout_marginTop="8sp"
                    android:background="#ffffffff"
                    android:elevation="10sp"
                    android:gravity="start|top"
                    android:hint="@string/highlights"
                    android:maxLines="17"
                    android:textColor="@color/fontc"
                    android:textColorHint="#aa757575"
                    android:textSize="20sp"
                    tools:ignore="LabelFor"
                    tools:targetApi="lollipop" />

                <TextView
                    android:id="@+id/locationName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignEnd="@+id/editText3"
                    android:layout_alignStart="@+id/editText3"
                    android:layout_below="@+id/editText3"
                    android:layout_marginBottom="14dp"
                    android:layout_marginTop="8sp"
                    android:background="@android:color/white"
                    android:elevation="10sp"
                    android:gravity="center_vertical"
                    android:hint="@string/location"
                    android:paddingEnd="4sp"
                    android:paddingStart="4sp"
                    android:textColor="@color/fontc"
                    android:textColorHint="#aa757575"
                    android:textSize="20sp"
                    tools:targetApi="lollipop" />

            </RelativeLayout>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>


    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        android:layout_marginBottom="8sp"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        android:layout_weight="6"
        android:background="@drawable/curved_sides"
        android:elevation="8sp"
        tools:targetApi="lollipop">

        <ImageView
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription=""
            android:paddingBottom="8sp"
            android:paddingTop="8sp"
            android:src="@drawable/ic_place_black_24dp"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/camera4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription=""
            android:paddingBottom="8sp"
            android:paddingTop="8sp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_camera_alt_black_24dp"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/camera1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription=""
            android:paddingBottom="8sp"
            android:paddingTop="8sp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_camera_alt_black_24dp"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/camera2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription=""
            android:paddingBottom="8sp"
            android:paddingTop="8sp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_camera_alt_black_24dp"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/camera3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription=""
            android:paddingBottom="8sp"
            android:paddingTop="8sp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_camera_alt_black_24dp"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/save_entry"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="8sp"
            android:paddingTop="8sp"
            android:src="@drawable/ic_done_black_24dp"
            tools:ignore="ContentDescription" />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>